--- a/XYZReader/src/main/res/values/dimens.xml
+++ b/XYZReader/src/main/res/values/dimens.xml
@@ -3,9 +3,16 @@
     <dimen name="detail_title_text_size">32sp</dimen>
     <dimen name="detail_body_text_size">22sp</dimen>
     <item name="detail_body_line_spacing_multiplier" format="float" type="fraction">1.25</item>
-
+    <dimen name="appbar_height">212dp</dimen>
     <dimen name="fab_elevation">2dp</dimen>
+    <dimen name="default_padding_small">4dp</dimen>
+    <dimen name="textsize_medium">18sp</dimen>
+    <dimen name="textsize_small">16sp</dimen>
+    <dimen name="default_padding_medium">8dp</dimen>
+    <dimen name="default_padding_large">16dp</dimen>
+    <dimen name="linearlayout_fix">500dp</dimen>
     <dimen name="fab_press_translation_z">6dp</dimen>
     <dimen name="fab_margin">24dp</dimen>
+    <dimen name="toolbar_elevation">16dp</dimen>
 
 </resources>
